--- a/popup.html
+++ b/popup.html
@@ -6,10 +6,50 @@
             body{
                 font-family: Arial;
                 margin: 0;
-                width: 850px;
+                /*width: 100%;*/
+            }
+
+            .container {
+                padding: 20px 0;
+                font-size: 1.6em;
+                width: 620px;
+            }
+
+            .container .name {
+                width: 480px;
+                margin: 5px 10px;
+                display: inline-block;
+            }
+
+            .container .copy {
+                display: inline-block;
+                width: 75px;
+                color: rgba(255,255,255,0.87);
+                background-color: rgb(16,108,200);
+                border-radius: 3px;
+                text-transform: uppercase;
+                font-size: 0.6em;
+                text-align: center;
+                padding: 10px;
+                cursor: pointer;
+            }
+
+            .container .copy:hover{
+                box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
+            }
+            .container .copy.copied {
+                background-color: rgba(32, 190, 97, 0.90);
+                color: rgba(255,255,255,1);
+            }
+
+            #copy-box {
+                z-index: -999999;
+                position: absolute;
+                left: -999999;
             }
         </style>
     </head>
     <body>
+        <input id="copy-box" type="text">
     </body>
 </html>
