--- a/src/popup.html
+++ b/src/popup.html
@@ -1,59 +1,14 @@
 <html>
     <head>
         <script type="text/javascript" src="jquery-1.12.0.min.js"></script>
-        <script src="popup.js"></script>
-        <style>
-            body{
-                font-family: Arial;
-                margin: 0;
-                font-size: 1.6em;
-                width: 620px;
-            }
-
-            .container {
-                padding: 20px 0;
-                width: 100%;
-            }
-
-            .container .name {
-                width: 480px;
-                margin: 5px 10px;
-                display: inline-block;
-            }
-
-            .container .copy {
-                display: inline-block;
-                width: 75px;
-                color: rgba(255,255,255,0.87);
-                background-color: rgb(16,108,200);
-                border-radius: 3px;
-                text-transform: uppercase;
-                font-size: 0.6em;
-                text-align: center;
-                padding: 10px;
-                cursor: pointer;
-            }
-
-            .container .copy:hover{
-                box-shadow: 0 2px 5px 0 rgba(0,0,0,.26);
-            }
-            .container .copy.copied {
-                background-color: rgba(32, 190, 97, 0.90);
-                color: rgba(255,255,255,1);
-            }
-
-            #copy-box {
-                z-index: -999999;
-                position: absolute;
-                left: -999999;
-            }
-            .error {
-                display: none;
-            }
-        </style>
+        <script type="text/javascript" src="feature.js"></script>
+        <script type="text/javascript" src="popup.js"></script>
+        <link rel="stylesheet" type="text/css" href="popup.css">
     </head>
     <body>
         <div class="error">JIRA issue not found on the page</div>
         <input id="copy-box" type="text">
+
+        <div class="container"></div>
     </body>
 </html>
