feat(options): added slash option to features
refer #1

--- a/src/options.html
+++ b/src/options.html
@@ -20,6 +20,7 @@
             <option value="-">Dash "-"</option>
             <option value="_">Underscore "_"</option>
             <option value=".">Dot "."</option>
+            <option value="/">Slash "/"</option>
         </select>
     </div>
 
@@ -39,6 +40,7 @@
             <option value="-">Dash "-"</option>
             <option value="_">Underscore "_"</option>
             <option value=".">Dot "."</option>
+            <option value="/">Slash "/"</option>
             <option value="">None</option>
         </select>
     </div>
@@ -59,6 +61,7 @@
             <option value="-">Dash "-"</option>
             <option value="_">Underscore "_"</option>
             <option value=".">Dot "."</option>
+            <option value="/">Slash "/"</option>
             <option value="">None</option>
         </select>
     </div>
