Support for regex 'ignore' pattern

--- a/src/options.html
+++ b/src/options.html
@@ -23,6 +23,10 @@
             <option value="/">Slash "/"</option>
         </select>
     </div>
+    <div class="property">
+        <label class="key" for="ignoredPattern">Ignored Pattern</label>
+        <input class="value" id="ignoredPattern" type="text" max="100" placeholder="Regex pattern to ignore">
+    </div>
 
     <div class="sectionHeader">Key</div>
     <div class="property">
